--- a/BiscuitDownloader_rust/Cargo.toml
+++ b/BiscuitDownloader_rust/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
-name = "BiscuitDownloader_rust"
+name = "biscuit_downloader_rust"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# reqwest = "0.12.12"
-# serde_json="1.0"
-# scraper="0.22"
-# openssl-sys = "0.9.104"
+reqwest="0.12.12"
