--- a/BiscuitDownloader_rust/Cargo.toml
+++ b/BiscuitDownloader_rust/Cargo.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-reqwest="0.12.12"
+reqwest = { version = "0.12.12", features = ["blocking", "cookies"] }
+html-escape = "0.2.13"
+regex = "1.11.1"
+serde  = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+scraper = "0.22.0"
