--- a/Biscuit/src-tauri/Cargo.toml
+++ b/Biscuit/src-tauri/Cargo.toml
@@ -18,9 +18,14 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
-tauri-plugin-opener = "2"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tauri-plugin-shell = "2"
+tauri = { version = "2.2.2", features = [] }
+tauri-plugin-opener = "2.2.4"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.135"
+tauri-plugin-shell = "2.2.0"
+reqwest = { version = "0.12.12", features = ["blocking", "cookies"] }
+html-escape = "0.2.13"
+regex = "1.11.1"
+scraper = "0.22.0"
+tokio = "1.43"
 
