--- a/Biscuit/package.json
+++ b/Biscuit/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.2.1",
-    "typescript": "~5.6.2",
+    "typescript": "5.7.3",
     "unplugin-auto-import": "^19.0.0",
     "unplugin-vue-components": "^28.0.0",
     "vite": "^6.0.3",
