--- a/Biscuit/package.json
+++ b/Biscuit/package.json
@@ -15,10 +15,15 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "~2",
+    "@tsparticles/preset-confetti": "^3.2.0",
+    "@tsparticles/preset-fireworks": "^3.2.0",
     "@tsparticles/slim": "^3.7.1",
     "@tsparticles/vue3": "^3.0.1",
     "@vueuse/core": "^12.4.0",
+    "canvas-confetti": "^1.9.3",
     "element-plus": "^2.9.3",
+    "tsparticles": "^3.7.1",
+    "tsparticles-preset-fireworks": "^2.12.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
